src/test/deca/context/valid/objet/declare-method-override.deca
// Description:
//    Déclare une méthode simple qui override celle de la classe mere
//
// Resultats:
//
//
// Historique:
//    cree le 13/01/2023

class A{
    void get(){
        
    }
}
