src/test/deca/context/invalid/declare-class-extends-int.deca
// Description:
//    Déclare une classe qui extends de int
//
// Resultats:
//    Erreur contextuelle   
//    Ligne 15: int is not a class (rule 1.3)
//
// Historique:
//    cree le 13/01/2023

class A extends int {

}